--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    
+    <!--React-MDL-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <title>Smart notes</title>
   </head>
   <body>
     <noscript>
